[gd_scene load_steps=7 format=3 uid="uid://brg7w5exoojcr"]

[ext_resource type="Script" uid="uid://bhfhbg4bqjuk" path="res://Game (movements, npcs, world map, inventory)/Scripts/SoundEffects.gd" id="1_agve8"]
[ext_resource type="PackedScene" uid="uid://bfjhgsir2n23s" path="res://Game (movements, npcs, world map, inventory)/Scenes/SFX/click_sfx.tscn" id="1_toh33"]
[ext_resource type="PackedScene" uid="uid://4ippt6nns2gg" path="res://Game (movements, npcs, world map, inventory)/Scenes/SFX/coin_sfx.tscn" id="2_agve8"]
[ext_resource type="PackedScene" uid="uid://d2h1smfg4ce7p" path="res://Game (movements, npcs, world map, inventory)/Scenes/SFX/transition_sfx.tscn" id="2_b6cko"]
[ext_resource type="PackedScene" uid="uid://duvepv1sodj7x" path="res://Game (movements, npcs, world map, inventory)/Scenes/SFX/eod_sfx.tscn" id="2_jhm4a"]
[ext_resource type="PackedScene" uid="uid://dg1vkrpkbt0wf" path="res://Game (movements, npcs, world map, inventory)/Scenes/SFX/done_cooking_sfx.tscn" id="3_jhm4a"]

[node name="SoundEffects" type="Node2D"]
script = ExtResource("1_agve8")

[node name="TransitionSFX" parent="." instance=ExtResource("2_b6cko")]

[node name="EodSFX" parent="." instance=ExtResource("2_jhm4a")]
process_mode = 3

[node name="ClickSFX" parent="." instance=ExtResource("1_toh33")]

[node name="CoinSFX" parent="." instance=ExtResource("2_agve8")]

[node name="DoneCookingSFX" parent="." instance=ExtResource("3_jhm4a")]
